<resources>
    <string name="daftar">Sign Up</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="tanya">Sudah memiliki akun?</string>
    <string name="tanya1">Belum memiliki akun?</string>
    <string name="app_name">Melanoma App</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="scan">Deteksi sekarang</string>
    <string name="confidence">Tingkat Akurasi</string>
    <string name="explanation">Penjelasan</string>
    <string name="suggestion">Saran</string>
    <string name="image_classifier_failed">Mohon maaf, gambar yang anda berikan tidak terdeteksi. Silahkan coba lagi.</string>
</resources>